changed platform spawn placement

--- a/_posts/2023-10-12-teamwork.md
+++ b/_posts/2023-10-12-teamwork.md
@@ -35,7 +35,7 @@ courses: { compsci: {week: 7} }
         let isMovingLeft = false;
         let isMovingRight = false;
         let isIdle = true;
-        
+
         // Define background scroll speed variables
         const baseBackgroundSpeed = 5;  // Base background scroll speed
         const boostBackgroundSpeed = 20;  // Background scroll speed during a boost
@@ -138,25 +138,39 @@ courses: { compsci: {week: 7} }
                 var platform = {
                     width: 150,
                     height: 20,
-                    x: Math.random() * (canvas.width - 150),
+                    x: Math.random() < 0.5 ? 0 : canvas.width - 150, // Spawn on the left or right
                     y: minHeight - Math.random() * (maxHeight - minHeight)
                 };
-                platforms.push(platform);
 
-                if (Math.random() < 0.1) {
-                    var trampoline = {
-                        x: platform.x + platform.width / 2 - 10,
-                        y: platform.y - 10,
-                        width: 20,
-                        height: 5,
-                    };
-                    platforms.push(trampoline);
+                // Ensure the platform is not too close to the player
+                if (
+                    platform.x + platform.width < spriteX + collisionWidth ||
+                    platform.x > spriteX + spriteWidth - collisionWidth
+                ) {
+                    platforms.push(platform);
+
+                    if (Math.random() < 0.2) { // Increase platform spawn probability
+                        var trampoline = {
+                            x: platform.x + platform.width / 2 - 10,
+                            y: platform.y - 10,
+                            width: 20,
+                            height: 5,
+                        };
+
+                        // Ensure the trampoline is not too close to the player
+                        if (
+                            trampoline.x + trampoline.width < spriteX + collisionWidth ||
+                            trampoline.x > spriteX + spriteWidth - collisionWidth
+                        ) {
+                            platforms.push(trampoline);
+                        }
+                    }
                 }
             }
 
             generateRandomPlatform();
 
-            setInterval(generateRandomPlatform, 1200);
+            setInterval(generateRandomPlatform, 800); // Decrease the spawn interval
 
             function checkCollisions() {
                 platforms.forEach(function (platform) {
@@ -236,7 +250,7 @@ courses: { compsci: {week: 7} }
                         spriteVelocityY = jumpStrength * 2;  // Increase boost strength
                         isJumping = true;
                         isOnGround = false;
-                        
+
                         // Increase background scroll speed during boost
                         backgroundSpeed = boostBackgroundSpeed;
                     }
@@ -250,7 +264,7 @@ courses: { compsci: {week: 7} }
                     spriteVelocityY = 0;
                     isJumping = false;
                     isOnGround = true;
-                    
+
                     // Restore the base background scroll speed
                     backgroundSpeed = baseBackgroundSpeed;
                 }
