added code for integration added background

--- a/_posts/2023-10-11-OOP.md
+++ b/_posts/2023-10-11-OOP.md
@@ -1,26 +1,18 @@
 ---
 layout: post
-title: Main Game!
-description: Jump with Link!
+title: Migrating to OOP
+description: Integrating OOP
 author: Katelyn Gelle, Gabriel Gravin, Kaden Vo, Daisy Zhang
 courses: {'compsci': {'week': 6}}
 type: hacks
 comments: True
 ---
 
-**Directions**  
-Freeplay with Link! Use "D" to make him move right, use the "A" to make him move left, and use the space bar to jump.  
-
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Flip or Freeze!</title>
-</head>
 <body>
     <canvas id="gameCanvas" width="800" height="400"></canvas>
     <script type="module">
         import { Character } from '{{site.baseurl}}/assets/js/Character.js'
-        var Link = new Character('{{site.baseurl}}/images/linksprites.png', 96, 104, 100, 400 - 104, -10, .5, 2);
+        var Link = new Character('{{site.baseurl}}/images/linksprites.png', 96, 104, 100, 400 - 104, -10, .5, 2, 10);
         // Get the canvas and its 2D rendering context
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
@@ -85,16 +77,14 @@ Freeplay with Link! Use "D" to make him move right, use the "A" to make him move
         // Game loop
         let framesPerSecond = 30;
         function gameLoop() {
-            // Clear the canvas
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
             // Draw the background image
             ctx.drawImage(backgroundImage, 0, 0, canvas.width, canvas.height);
             // Update sprite position based on key down left and right
             if (Link.isMovingLeft) {
-                Link.spriteX -= 10;
+                Link.spriteX -= Link.movementSpeed;
             }
             if (Link.isMovingRight) {
-                Link.spriteX += 10;
+                Link.spriteX += Link.movementSpeed;
             }
             // Update the sprite position based on gravity
             Link.spriteVelocityY += Link.gravity;
@@ -127,4 +117,3 @@ Freeplay with Link! Use "D" to make him move right, use the "A" to make him move
         gameLoop();
     </script>
 </body>
-</html>
